<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">专属APP</string>
    
    <!-- 主页 -->
    <string name="main_title_bar">主页</string>
    
    <!-- 天气 -->
    <string name="search_city_failed">查询不到该城市</string>
    <string name="search_failed">查询异常</string>
    <string name="input_city_name">请输入城市名</string>
    <string name="search">查询</string>
    <string name="city">城市:</string>
    <string name="feel_temperature">体感温度:</string>
    <string name="weather_conditions">天气状况:</string>
    <string name="air_quality">空气质量:</string>
    <string name="dressing_index">穿衣指数:</string>
    <string name="movement_index">运动指数:</string>
    <string name="weather_module">天气</string>
    
    <!-- 地图 -->
    <string name="start_pos">起点:</string>
    <string name="end_pos">终点:</string>
    <string name="start_pos_eg">江汉路</string>
    <string name="end_pos_eg">光谷</string>
    <string name="drive_search">驾车出行</string>
    <string name="tran_search">公交出行</string>
    <string name="walk_search">步行</string>
    <string name="custom_icon">自定义起终点图标</string>
    <string name="map_module">地图</string>
    
    
</resources>
