<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/weather_background">
    
	<EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_city_name"
        android:textColor="@android:color/black"
        android:layout_margin="20dp"/>
	
	<Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" 
        android:layout_marginLeft="20dp"
		android:layout_marginTop="50dp"
		android:textColor="@android:color/black"
        android:background="@drawable/rounded_blue_btn"
        android:gravity="center"/>

    
    <LinearLayout 
        android:layout_marginTop="20dp"
        android:id="@+id/lin"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">
        
		<LinearLayout 
		    android:layout_margin="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
        	<TextView 
           	 	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/city"
            	android:textColor="@android:color/black"
            	android:layout_weight="1"
            	android:gravity="center"/>
        	<TextView 
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:id="@+id/city"
            	android:textColor="@android:color/black"
            	android:layout_weight="1"
            	android:gravity="left|center_vertical"/>
    	</LinearLayout>
    	
		<LinearLayout 
		    android:layout_margin="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
        	<TextView 
           	 	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/feel_temperature"
            	android:layout_weight="1"
            	android:textColor="@android:color/black"
            	android:gravity="center"/>
        	<TextView 
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:id="@+id/fl"
            	android:textColor="@android:color/black"
            	android:layout_weight="1"
            	android:gravity="left|center_vertical"/>
    	</LinearLayout>
    	
		<LinearLayout 
		    android:layout_margin="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
        	<TextView 
           	 	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/weather_conditions"
            	android:layout_weight="1"
            	android:textColor="@android:color/black"
            	android:gravity="center"/>
        	<TextView 
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:id="@+id/cond"
            	android:textColor="@android:color/black"
            	android:layout_weight="1"
            	android:gravity="left|center_vertical"/>
    	</LinearLayout>
    	
		<LinearLayout 
		    android:id="@+id/pm25Lin"
		    android:layout_margin="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
        	<TextView 
           	 	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="PM2.5 :"
            	android:layout_weight="1"
            	android:textColor="@android:color/black"
            	android:gravity="center"/>
        	<TextView 
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:id="@+id/pm25"
            	android:textColor="@android:color/black"
            	android:layout_weight="1"
            	android:gravity="left|center_vertical"/>
    	</LinearLayout>
    	
		<LinearLayout 
		    android:id="@+id/qltyLin"
		    android:layout_margin="5dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
        	<TextView 
           	 	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/air_quality"
            	android:layout_weight="1"
            	android:textColor="@android:color/black"
            	android:gravity="center"/>
        	<TextView 
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:id="@+id/qlty"
            	android:textColor="@android:color/black"
            	android:layout_weight="1"
            	android:gravity="left|center_vertical"/>
    	</LinearLayout>
    	
		<LinearLayout 
		    android:layout_margin="5dp"
		    android:id="@+id/drsgLin"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
        	<TextView 
           	 	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/dressing_index"
            	android:layout_weight="1"
            	android:textColor="@android:color/black"
            	android:gravity="center"/>
        	<TextView 
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:id="@+id/drsg"
            	android:textColor="@android:color/black"
            	android:layout_weight="1"
            	android:gravity="left|center_vertical"/>
    	</LinearLayout>
    	
		<LinearLayout 
		    android:layout_margin="5dp"
		    android:id="@+id/sportLin"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
        	<TextView 
           	 	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/movement_index"
            	android:layout_weight="1"
            	android:textColor="@android:color/black"
            	android:gravity="center"/>
        	<TextView 
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:id="@+id/sport"
            	android:textColor="@android:color/black"
            	android:layout_weight="1"
            	android:gravity="left|center_vertical"/>
    	</LinearLayout>
        
    </LinearLayout>


</LinearLayout>
