<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/map_background">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_pos"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/start_pos_eg"
            android:textColor="@android:color/black" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_pos" 
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/end"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/end_pos_eg" 
            android:textColor="@android:color/black">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/drive"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_weight="1.0"
            android:background="@drawable/rounded_blue_btn"
            android:onClick="SearchButtonProcess"
            android:text="@string/drive_search" 
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/transit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_weight="1.0"
            android:background="@drawable/rounded_blue_btn"
            android:onClick="SearchButtonProcess"
            android:text="@string/drive_search"
            android:textColor="@android:color/black"  />

        <Button
            android:id="@+id/walk"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_weight="1.0"
            android:background="@drawable/rounded_blue_btn"
            android:onClick="SearchButtonProcess"
            android:text="@string/walk_search" 
            android:textColor="@android:color/black" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.baidu.mapapi.map.MapView
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dip"
            android:orientation="vertical"
            android:visibility="gone" >

            <Button
                android:id="@+id/customicon"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dip"
                android:layout_weight="1.0"
                android:background="@drawable/rounded_blue_btn"
                android:onClick="changeRouteIcon"
                android:text="@string/custom_icon"
                android:textColor="@android:color/black"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginBottom="10dip"
            android:id="@+id/preAndNext"
            android:visibility="gone" >

            <LinearLayout 
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:layout_weight="1.0"
                android:background="@android:color/black">
				<Button
	                android:id="@+id/mBtnPre"
	                android:layout_width="40dp"
	                android:layout_height="40dp"
	                android:background="@drawable/pre"
	                android:onClick="nodeClick" />
            </LinearLayout>

            <LinearLayout 
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:layout_weight="1.0"
                android:background="@android:color/black">
	            <Button
	                android:id="@+id/mBtnNext"
	                android:layout_width="40dp"
	                android:layout_height="40dp"
	                android:layout_weight="1.0"
	                android:background="@drawable/next"
	                android:onClick="nodeClick"  />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

</LinearLayout>